# news_reader

./: README.md  __main__.py  config.py  pyproject.toml
src/: _ui.py  article_reader.py  feed_parser.py  simple_tui.py  ui.py
src/experiments/: ui.py
